syntax = "proto3";
option java_multiple_files = true;
package net.reappay.pg.payments.paymentsback.proto;

message SampleRequest {
  string userId = 1;
  optional string message = 2 ;
}

message SampleResponse {
  string message = 1;
}

service SampleService {
  rpc SampleCall (SampleRequest) returns (SampleResponse);
  rpc SampleHate (SampleRequest) returns (SampleResponse);
}
